runs/2026-06-18-gateway-api-ingress-migration/expected/convert-standard.warn.txt
┌─ WARN  ────────────────────────────────────────
│  Unsupported annotation nginx.ingress.kubernetes.io/configuration-snippet
│  source: INGRESS-NGINX
│  object: Ingress: web/vargg-web
└─
┌─ WARN  ────────────────────────────────────────
│  Unsupported annotation nginx.ingress.kubernetes.io/force-ssl-redirect
│  source: INGRESS-NGINX
│  object: Ingress: web/vargg-web
└─
┌─ WARN  ────────────────────────────────────────
│  Unsupported annotation nginx.ingress.kubernetes.io/limit-rps
│  source: INGRESS-NGINX
│  object: Ingress: web/vargg-web
└─
┌─ INFO  ────────────────────────────────────────
│  Using case-insensitive regex path matches. You may want to change this.
│  source: INGRESS-NGINX
│  object: HTTPRoute: web/vargg-canary-var-gg
└─
┌─ WARN  ────────────────────────────────────────
│  Failed to apply web.vargg-web.metadata.annotations."nginx.ingress.kubernetes.io/proxy-body-size" from web/vargg-web: Most Gateway API implementations have reasonable body size and buffering defaults
│  source: STANDARD_EMITTER
│  object: HTTPRoute: web/vargg-canary-var-gg
└─
┌─ WARN  ────────────────────────────────────────
│  Failed to apply web.vargg-web.metadata.annotations."nginx.ingress.kubernetes.io/proxy-body-size" from web/vargg-web: Most Gateway API implementations have reasonable body size and buffering defaults
│  source: STANDARD_EMITTER
│  object: HTTPRoute: web/vargg-canary-var-gg
└─
┌─ WARN  ────────────────────────────────────────
│  Gateway API does not support configuring URL normalization (RFC 3986, Section 6). Please check if this matters for your use case and consult implementation-specific details.
│  source: STANDARD_EMITTER
└─
